--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "animejs": "^4.0.2",
     "aos": "^2.3.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
